# raccon_gc

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
src/: CMakeLists.txt
src/template/: CMakeLists.txt  template.c
src/template/include/: template.h
test/: CMakeLists.txt
test/template/: CMakeLists.txt  template_test.cpp
